crates/tmark-writers/tests/snapshots/fixtures__container-multicolumn@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tsdiv}{multicolumn}[cols=2]
\begin{itemize}
\item alpha
\item beta
\item gamma
\end{itemize}
\end{tsdiv}

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
