crates/tmark-writers/tests/snapshots/fixtures__diag-table-column-unknown@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: (1fr, 1fr, 1fr,),
  align: (left, left, left,),
  table.header(table.cell(rowspan: 2)[Year], table.cell(colspan: 2, align: center)[Actual], [H1], [H2]),
  [2024], [], [],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
